k8s_base/base/website/website.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
    service: website
  name: website
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: website
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: website
    version: v1
  name: website
spec:
  selector:
    matchLabels:
      app: website
      version: v1
  template:
    metadata:
      labels:
        app: website
        version: v1
    spec:
      containers:
      - image: nginx:1.13.0-alpine
        imagePullPolicy: IfNotPresent
        name: website
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          readOnly: true
          name: nginx-html
        - mountPath: /var/log/nginx
          name: log
      volumes:
      - name: nginx-html
        configMap:
          name: nginx-html
      - name: log
        emptyDir: {}
---
