k8s_base/base/website/http_gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - www.nuts.yantao0527.me
    - argocd2.nuts.yantao0527.me
    - kiali.nuts.yantao0527.me
    - prometheus.nuts.yantao0527.me
    - grafana.nuts.yantao0527.me
    - tracing.nuts.yantao0527.me
    - gitea.nuts.yantao0527.me
---
