k8s_base/base/website/addons_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
spec:
  hosts:
  - grafana.nuts.yantao0527.me
  gateways:
  - http-gateway
  - https-gateway
  http:
  - route:
    - destination:
        host: grafana.jx-observability.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
spec:
  hosts:
  - kiali.nuts.yantao0527.me
  gateways:
  - http-gateway
  - https-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
spec:
  hosts:
  - prometheus.nuts.yantao0527.me
  gateways:
  - http-gateway
  - https-gateway
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
spec:
  hosts:
  - tracing.nuts.yantao0527.me
  gateways:
  - http-gateway
  - https-gateway
  http:
  - route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
---
