k8s_base/base/website/argocd_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd2
spec:
  hosts:
  - argocd2.nuts.yantao0527.me
  gateways:
  - http-gateway
  - https-gateway
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
