k8s_base/base/website/dashboard_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
spec:
  hosts:
  - dashboard.nuts.yantao0527.me
  gateways:
  - https-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - dashboard.nuts.yantao0527.me
    route:
    - destination:
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
        port:
          number: 443
---
