k8s_base/base/website/website_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: website
spec:
  hosts:
  - www.nuts.yantao0527.me
  gateways:
  - http-gateway
  - https-gateway
  http:
  - route:
    - destination:
        host: website.website.svc.cluster.local
        port: 
          number: 80
---
